--- a/index.html
+++ b/index.html
@@ -1228,10 +1228,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                   <div>
                                     <p class="MegaMenu__PushHeading title">Obtenir un devis</p>
                                             <a
-                                              href="tel:+12016496191"
+                                              href="tel:+12085682490"
                                               class="inline-flex items-center px-6 py-3 text-lg font-semibold text-white bg-orange-600 rounded-lg hover:bg-green-700 transition-colors"
                                             >
-                                              Appel devis gratuit (+1 (201) 649 6191)
+                                              Appel devis gratuit (+12085682490)
                                             </a>
                                             <a class="reviews" href="https://goo.gl/maps/zuAEH3KToN6T3e217" target="_blank">
                                               <img loading="lazy" src="./files/Frame_1402_2.svg">
@@ -1245,7 +1245,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                               href="tel:+12016496191"
                                               class="inline-flex items-center px-6 py-3 text-lg font-semibold text-white bg-orange-600 rounded-lg hover:bg-green-700 transition-colors"
                                             >
-                                              Appel devis gratuit (+1 (201) 649 6191)
+                                              Appel devis gratuit (+12085682490)
                                             </a></div>
     <div class="Header__FlexItem Header__FlexItem--fill rightMenu hidden-pocket hidden-lap">
       <!-- MENU ON THE RIGHT --><nav class="Header__MainNav" aria-label="Navigation principale">
@@ -1265,11 +1265,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           -->
             <li class="HorizontalList__Item">
               <a
-                href="tel:+12016496191"
-                class="inline-flex items-center px-6 py-3 text-lg font-semibold text-white bg-orange-600 rounded-lg hover:bg-green-700 transition-colors"
-              >
-                Appel devis gratuit (+1 (201) 649 6191)
-              </a>
+                  href="tel:+12085682490"
+                  class="Button Button--primary"
+                >
+                  Devis gratuit 🌴
+                 
+                </a>
             </li>
           </ul>
         </nav><!-- END OF MENU ON THE RIGHT -->
