--- a/index.html
+++ b/index.html
@@ -1245,7 +1245,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   href="tel:+12016496191"
                   class="Button Button--primary"
                 >
-                  Faire un devis gratuit ☎️
+                  Devis gratuit 🌴
                  
                 </a></div>
     <div class="Header__FlexItem Header__FlexItem--fill rightMenu hidden-pocket hidden-lap">
