--- a/index.html
+++ b/index.html
@@ -1241,13 +1241,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div></li></ul>
         </nav></div><div class="Header__FlexItem Header__FlexItem--logo"><p class="Header__Logo"><a href="https://pousse.fr/" class="Header__LogoLink"><img class="Header__LogoImage Header__LogoImage--primary" src="./files/logo-pousse_140x.svg" srcset="//pousse.fr/cdn/shop/files/logo-pousse_140x.svg?v=1679743063 1x, //pousse.fr/cdn/shop/files/logo-pousse_140x@2x.svg?v=1679743063 2x" width="148" height="24" alt="Pousse.fr"></a></p></div>
 
-    <div class="Header__FlexItem Header__FlexItem--fill contactMobile hidden-desk"><a
-                  href="tel:+12016496191"
-                  class="Button Button--primary"
-                >
-                  Devis gratuit 🌴
-                 
-                </a></div>
+    <div class="Header__FlexItem Header__FlexItem--fill contactMobile hidden-desk">
+      </div>
     <div class="Header__FlexItem Header__FlexItem--fill rightMenu hidden-pocket hidden-lap">
       <!-- MENU ON THE RIGHT --><nav class="Header__MainNav" aria-label="Navigation principale">
           <ul class="HorizontalList HorizontalList--spacingExtraLoose"><li class="HorizontalList__Item ">
